Remove comment in apicalls, fix nav bar alignment in CSS

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -50,12 +50,14 @@
 }
 
 .nav-bar_p {
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
+  display: flex;
   width: 100%;
   text-align: center;
   padding: 30px 20px 30px 20px;
   font-size: 140%;
-  padding: 30px;
   text-align: center;
   width: 100%;
   height: 116px;
